--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Worked in the fashion industry in production management for 3 years and retail for over 7 years. Excited to explore my interest in tech!.</p>
                 </div>
                 <div class="clear"></div>
               </li>
