--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Kelly Becker</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Cheers to something new</p>
                 </div>
                 <div class="clear"></div>
 
